need to downgrade to java 8, because raspberry pi doesnt support 11 yet